<resources>
    <string name="app_name">ScannerJet</string>

    <string name="admob_native_ad">ca-app-pub-3706080646520947/6276455463</string>
    <string name="admob_app_id">ca-app-pub-3706080646520947~7453805766</string>
    <string name="admob_banner_id">ca-app-pub-3706080646520947/7809028989</string>
    <string name="admob_interstitial_id">ca-app-pub-3706080646520947/6468027159</string>
    <string name="selectLanguage">Select Language</string>



    <string name="academic_docs_empty">No Academic Docs Scanned Yet.</string>
    <string name="all_docs_empty">No Document Scanned Yet.</string>
    <string name="applying_filter">Applying filter</string>
    <string name="auto">Auto</string>
    <string name="b_and_w">B/W</string>
    <string name="business_card_empty">No Business Card Scanned Yet.</string>
    <string name="camera_permission_confirmation">This app uses the CameraView feature which allows you to take picture. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="done">Save</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="gray">Gray</string>
    <string name="id_card_empty">No ID Card Scanned Yet.</string>
    <string name="loading">Loading</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is running low on memory, which may cause some delays while you\'re editing images.</string>
    <string name="ok">Ok</string>
    <string name="original">Original</string>
    <string name="personal_tag_empty">No Personal Tag Scanned Yet.</string>
    <string name="placementId">video</string>
    <string name="please_hold_the_device_horizontally">Please hold the device horizontally and match the blue line in book\'s binding line</string>
    <string name="scan">Next</string>
    <string name="continue1">Continue</string>
    <string name="scanning">Scanning</string>
    <string name="search_menu_title">Search</string>
    <string name="single_id_card_txt">Make a one side ID card with ready for print.</string>
    <string name="two_id_card_txt">Make a two side ID card with ready for print.</string>
    <string name="retake">Retake</string>
    <string name="color">Color</string>
    <string name="ocvBlack">OCV Black</string>
    <string name="sharpBlack">Sharp Black</string>
    <string name="edit">Edit</string>
    <string name="rotate">Rotate</string>
    <string name="highlight">Highlight</string>
    <string name="eraser">Eraser</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="create">Create</string>
    <string name="saved_sig">Saved sig</string>
    <string name="createSig">Create Sig</string>
    <string name="font">Font</string>
    <string name="Opacity">Opacity</string>
    <string name="alignment">Alignment</string>
    <string name="generate">Generate</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="addNew">Add New</string>
    <string name="scrap">Scrap</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="horizontal">Horizontal</string>
    <string name="verticle">Vertical</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="subscript">Subscript</string>
    <string name="superscript">Superscript</string>
    <string name="strikethrough">Strike</string>
    <string name="underline">Underline</string>
    <string name="headline1">Headline1</string>
    <string name="headline2">Headline2</string>
    <string name="headline3">Headline3</string>
    <string name="headline4">Headline4</string>
    <string name="headline5">Headline5</string>
    <string name="headline6">Headline6</string>
    <string name="redText">Red Text</string>
    <string name="indent">Indent</string>
    <string name="outdent">Outdent</string>
    <string name="leftText">Left Text</string>
    <string name="center">Center</string>
    <string name="rightText">Right Text</string>
    <string name="lineDot">Line Dot</string>
    <string name="number">Number</string>
    <string name="checkMark">Check Mark</string>
    <string name="noDocumentScan">No Document Scanned Yet.</string>
    <string name="cropDocument">Crop Document</string>
    <string name="rotateDoc">Rotate Doc</string>
    <string name="currentFilter">Current Filter</string>
    <string name="editorDocument">Editor Document</string>
    <string name="colorFilter">Color Filter</string>
    <string name="adjust">Adjust</string>
    <string name="size">Size</string>
    <string name="noSignFound">No Signature Found...</string>
    <string name="clear">Clear</string>
    <string name="signature">Signature</string>




    <string name="enterText">Enter text</string>
    <string name="watermark">Watermark</string>
    <string name="text">Text</string>
    <string name="overlay">Overlay</string>
    <string name="colorEffect">Color Effect</string>
    <string name="idCard">ID Card</string>
    <string name="imageToText">Image To Text</string>
    <string name="note">Note</string>
    <string name="qrGenerator">QR Generate</string>
    <string name="qrCodeType">QR-Code Type</string>
    <string name="savedDocument">Saved Document</string>
    <string name="scanner">Scanner</string>
    <string name="document">Document</string>
    <string name="book">Book</string>
    <string name="photo">Photo</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="qrReader">QR Reader</string>
    <string name="qrCodeResult">QR Code Result</string>
    <string name="areUSure">Are you Sure?</string>
    <string name="deleteThisDoc">you want to delete this Document?</string>
    <string name="saveChanges">Save Changes?</string>
    <string name="changesBeLost">Your unsaved changes will be lost.</string>
    <string name="saveChangesBeforeLost">Save Changes before closing?</string>
    <string name="sendToMail">Send to Mail</string>
    <string name="enterEmailId">Enter E-mail Id</string>
    <string name="saveAsPdf">Save as PDF</string>
    <string name="rename">Rename</string>
    <string name="saveToGallery">Save to Gallery</string>
    <string name="inputText">Input Text</string>
    <string name="savePdfWithPass">Save PDF With Password</string>
    <string name="enterPdfName">Enter PDF Name</string>
    <string name="setPdfPass">Set PDF password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="saveAsImage">Share as Image</string>
    <string name="shareAsPdf">Share as PDF</string>
    <string name="sharePdfPass">Share PDF With Password</string>
    <string name="setDocumentName">Set Document Name</string>
    <string name="enterDocumentName">Enter Document Name</string>
    <string name="importFromGallery">Import from Gallery</string>
    <string name="tap_the_picture_to_crop">Tap the picture to crop or rotate</string>
    <string name="sortBy">Sort By</string>
    <string name="shareAll">Share all</string>
    <string name="viewMode">View Mode</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="createNewFolder">Create New Folder</string>
    <string name="enterFolderName">Folder Name</string>
    <string name="noDocumentFound">No documents found</string>
    <string name="move">Move</string>
    <string name="moveFolder">Move To</string>
    <string name="tapToAddNew">Tap to Add New</string>
    <string name="PURCHASE_NO_AD">purchase_no_ad</string>
    <string name="license_key"></string>
    <string name="purchase_text">Your purchase was successful!</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="tap_to_add_new_page">Tap to add new pages</string>
    <string name="delete">Delete</string>
    <string name="loading_progress">Please Wait...</string>




    <string name="processing">Processing...</string>
    <string name="apply_filter">Applying Filter...</string>
    <string name="select_image_limit">You can select up to 1 images</string>
    <string name="enter_text">Please Enter Text</string>
    <string name="choose_color">Choose color</string>
    <string name="ok1">ok</string>
    <string name="please_wait">Please Wait...</string>
    <string name="image_select_limit">You can select up to 1 images</string>
    <string name="save">save</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="select_image_limit_7">You can select up to 7 images</string>
    <string name="dialog_cancel">cancel</string>
    <string name="copied_clip">Text copied to clipboard</string>
    <string name="processing1">Processing</string>
    <string name="doing_ocr">Doing OCR...</string>
    <string name="text_not_found">No Text Found...</string>
    <string name="gallery">Gallery</string>
    <string name="select_image_limit_10">You can select up to 10 images</string>
    <string name="business_card">Business Card</string>
    <string name="id_card">ID Card</string>
    <string name="academic_card">Academic Docs</string>
    <string name="personal_tag">Personal Tag</string>
    <string name="my_document">My Documents</string>
    <string name="qr_reader">QR Reader</string>
    <string name="qr_generate">QR Generate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="lang">Language</string>
    <string name="all_doc">All</string>
    <string name="move_success">Move successfully</string>
    <string name="name_required">Folder name is required</string>
    <string name="white_space_removed">Please remove space between folder name</string>
    <string name="permisson_required">Permissions Required</string>
    <string name="forecefully_string">\"You have forcefully denied some of the required permissions \"</string>
    <string name="setting_permission">for this action. Please open settings, go to permissions and allow them.</string>
    <string name="cancel">Cancel</string>
    <string name="ass_date">Ascending date</string>
    <string name="des_date">Descending date</string>
    <string name="asc_name">Ascending name</string>
    <string name="des_name">Descending name</string>
    <string name="sort_by">Sort By</string>
    <string name="share_all">Share All</string>
    <string name="move_folder">Move successfully</string>
    <string name="select_one_folder">Please select at least one folder</string>
    <string name="valid_name">Please Enter Valid Document Name!</string>
    <string name="save_success">Save Successfully</string>
    <string name="delete_req_1">Cannot delete , 1 image required</string>
    <string name="delete_image">Delete  Image</string>
    <string name="delete_current_umage">Are you sure you want to delete current image?</string>
    <string name="color_filter">Color Filter</string>


    <string name="high_light">Highlight</string>
    <string name="pic">Picture</string>

    <string name="color_effect">Color Effect</string>

</resources>