<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:clipChildren="false"
        android:layout_above="@id/ly_bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:onClick="onClick"
                android:padding="6dp"
                android:src="@drawable/mk_icon_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_back"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txv_common_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="Crop Documents"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:layout_toLeftOf="@+id/iv_done"
                    android:onClick="onClick"
                    android:padding="@dimen/_7sdp"
                    android:visibility="gone"
                    android:tint="@color/white"
                    android:src="@drawable/ic_edit" />

                <TextView
                    android:id="@+id/saveAndNextBtn"
                    android:layout_width="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/filter_bg"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Save &amp; Next"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_tap_crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tap_the_picture_to_crop"
            android:textColor="#a5acb4"
            android:textSize="13sp"
            android:visibility="gone" />

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1"
            android:background="@color/bg_color"
            app:banner_auto_loop="false"
            app:banner_infinite_loop="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_12sdp"
            android:layout_weight="1"
            >



            <me.pqpo.smartcropperlib.view.CropImageView
                android:id="@+id/iv_preview_crop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:civAutoScanEnable="true"
                app:civLineColor="@color/light_txt_color"
                app:civMagnifierCrossColor="@color/light_txt_color"
                app:civPointColor="@color/light_txt_color"
                app:civPointFillColor="@color/light_txt_color"
                app:civShowEdgeMidPoint="true"
                app:civShowGuideLine="true" />



        </RelativeLayout>


        <com.gulofy.scannerjet.utils.ViewPagerNoScroll
            android:id="@+id/vp_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_page_swiper_container"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_page_left"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:tint="@color/black"
                android:src="@drawable/ic_page_left" />

            <TextView
                android:id="@+id/tv_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="1/1"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/img_page_right"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="4dp"
                android:tint="@color/black"
                android:src="@drawable/ic_page_right" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/toolbar_color"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <SeekBar
                android:id="@+id/seekBarBrightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:maxHeight="2dp"
                android:progress="20"
                android:progressDrawable="@drawable/seekbar_opacity"
                android:thumb="@drawable/ic_thumb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_filter_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/toolbar_color"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/iv_original"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/filter_selection_bg"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="O"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/original"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/iv_color"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/filter_bg"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="C"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/color"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/iv_sharp_black"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/filter_bg"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="S"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/sharpBlack"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/iv_ocv_black"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/filter_bg"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="B"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/ocvBlack"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ly_rotate_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7sdp"
                android:onClick="onClick"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_rotate_doc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/rotateDoc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_current_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:onClick="onClick"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_current_filter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/currentFilter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="@dimen/_5sdp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/iv_Rotate_Doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:onClick="onClick"
                android:padding="@dimen/_5sdp"
                android:text="@string/rotateDoc"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
